--- a/wind.html
+++ b/wind.html
@@ -21,8 +21,8 @@ let lastFetch = 0;
 let fetchInterval = 60000; // 1 minute
 
 let agents = [];
-let numLines = 120; // maximum pool of agents
-let speedScale = 0.6;  
+let numLines = 300; // pool of agents
+let speedScale = 0.4;  // reduced speed for gentler drift
 
 // London coordinates
 let lat = 51.5074; 
@@ -42,17 +42,17 @@ function draw() {
   background(240);
 
   if (hasWindData && windSpeed > 0.01) {
-    // line length scales with wind speed
+    // Line length scales with wind speed
     let globalLen = map(windSpeed, 0, 20, 10, 100);
     globalLen = constrain(globalLen, 10, 100);
 
     let baseAngle = radians(windDir + 90);
-    let vx = cos(baseAngle) * windSpeed * 0.3 * speedScale;
-    let vy = sin(baseAngle) * windSpeed * 0.3 * speedScale;
+    let vx = cos(baseAngle) * windSpeed * 0.25 * speedScale; // gentler vector
+    let vy = sin(baseAngle) * windSpeed * 0.25 * speedScale;
 
-    // NEW: number of lines also scales (max 40% of numLines)
-    let effectiveNum = int(map(windSpeed, 0, 20, 0, numLines * 0.4));
-    effectiveNum = constrain(effectiveNum, 0, int(numLines * 0.4));
+    // Line count scales with wind speed
+    let effectiveNum = int(map(windSpeed, 0, 20, 7, 251));
+    effectiveNum = constrain(effectiveNum, 7, 251);
 
     for (let i = 0; i < effectiveNum; i++) {
       let a = agents[i];
@@ -60,7 +60,7 @@ function draw() {
       a.display(baseAngle, globalLen);
     }
   } else {
-    // fallback: static red dots
+    // Fallback: static red dots
     stroke(200, 0, 0);
     strokeWeight(1);
     for (let a of agents) {
@@ -129,4 +129,3 @@ function windowResized() {
 </script>
 </body>
 </html>
-
