--- a/wind-ldn.html
+++ b/wind-ldn.html
@@ -19,7 +19,7 @@ let windDir = 0;
 let hasWindData = false;
 let lastFetch = 0;
 let fetchInterval = 60000; // 1 minute
-let lastUrl = "";
+// let lastUrl = "";
 
 let agents = [];
 let numLines = 300; // pool of agents
@@ -31,10 +31,10 @@ let lon = -0.1278;
 
 function setup() {
   createCanvas(windowWidth, windowHeight);
-  pixelDensity(1); // keep consistent across browsers
-  textFont("monospace");
-  textSize(5);
-  fill(50, 0, 0);
+  pixelDensity(0.5); // keep consistent across browsers
+ // textFont("monospace");
+ // textSize(5);
+ //  fill(50, 0, 0);
 
   for (let i=0; i<numLines; i++) {
     agents.push(new LineAgent(random(width), random(height)));
@@ -76,7 +76,7 @@ function draw() {
       point(a.x, a.y);
     }
   }
-
+/*
   // --- Debug strip on left edge ---
   push();
   translate(10, height/2);
@@ -94,7 +94,9 @@ function draw() {
     lastFetch = millis();
   }
 }
+*/
 
+  
 class LineAgent {
   constructor(x,y) {
     this.x = x;
@@ -129,7 +131,7 @@ class LineAgent {
 
 async function fetchData() {
   try {
-    lastUrl = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`;
+  // lastUrl = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true`;
     let res = await fetch(lastUrl);
     let data = await res.json();
     if (data && data.current_weather) {
