--- a/wind-ldn.html
+++ b/wind-ldn.html
@@ -90,6 +90,8 @@ class LineAgent {
     this.amp = random(0.02, 0.05);
     this.angleOffset = radians(random(-2, 2));
     this.lengthFactor = random(0.7, 1.3);
+    this.startDelay = int(random(0, 300)); // frames to wait before appearing
+
   }
   update(vx, vy, baseAngle, len) {
     let jitterX = cos(frameCount * this.freq + this.phase) * this.amp * vx;
@@ -100,6 +102,20 @@ class LineAgent {
     if (this.x > width + len) { this.x = -len; this.y = random(-len, height + len); }
     if (this.y < -len) { this.y = height + len; this.x = random(-len, width + len); }
     if (this.y > height + len) { this.y = -len; this.x = random(-len, width + len); }
+   
+    if (frameCount > this.startDelay) {
+  let jitterX = cos(frameCount * this.freq + this.phase) * this.amp * vx;
+  let jitterY = sin(frameCount * this.freq + this.phase) * this.amp * vy;
+  this.x += vx + jitterX;
+  this.y += vy + jitterY;
+
+  // wrap-around stays the same
+  if (this.x < -len) { this.x = width + len; this.y = random(-len, height+len); }
+  if (this.x > width+len) { this.x = -len; this.y = random(-len, height+len); }
+  if (this.y < -len) { this.y = height + len; this.x = random(-len, width+len); }
+  if (this.y > height+len) { this.y = -len; this.x = random(-len, width+len); }
+}
+
   }
   display(baseAngle, globalLen, col) {
     let thisLen = globalLen * this.lengthFactor;
@@ -110,6 +126,18 @@ class LineAgent {
     strokeWeight(0.5);
     line(-thisLen / 2, 0, thisLen / 2, 0);
     pop();
+ 
+    if (frameCount > this.startDelay) {
+  let thisLen = globalLen * this.lengthFactor;
+  push();
+  translate(this.x, this.y);
+  rotate(baseAngle + this.angleOffset);
+  stroke(col);
+  strokeWeight(0.5);
+  line(-thisLen/2, 0, thisLen/2, 0);
+  pop();
+}
+
   }
 }
 
