--- a/wind-ldn.html
+++ b/wind-ldn.html
@@ -110,11 +110,29 @@ class LineAgent {
   this.y += vy + jitterY;
 
   // wrap-around stays the same
-  if (this.x < -len) { this.x = width + len; this.y = random(-len, height+len); }
-  if (this.x > width+len) { this.x = -len; this.y = random(-len, height+len); }
-  if (this.y < -len) { this.y = height + len; this.x = random(-len, width+len); }
-  if (this.y > height+len) { this.y = -len; this.x = random(-len, width+len); }
+  //if (this.x < -len) { this.x = width + len; this.y = random(-len, height+len); }
+  //if (this.x > width+len) { this.x = -len; this.y = random(-len, height+len); }
+  //if (this.y < -len) { this.y = height + len; this.x = random(-len, width+len); }
+  //if (this.y > height+len) { this.y = -len; this.x = random(-len, width+len); }
+
+      if (this.x < -len || this.x > width+len || this.y < -len || this.y > height+len) {
+  let edge = int(random(4)); // 0=left, 1=right, 2=top, 3=bottom
+  if (edge === 0) { // left
+    this.x = -len;
+    this.y = random(height);
+  } else if (edge === 1) { // right
+    this.x = width + len;
+    this.y = random(height);
+  } else if (edge === 2) { // top
+    this.x = random(width);
+    this.y = -len;
+  } else if (edge === 3) { // bottom
+    this.x = random(width);
+    this.y = height + len;
+  }
 }
+
+
 
   }
   display(baseAngle, globalLen, col) {
